Custom URL overflow fix.

--- a/src/components/nav/NetworkPicker/style.scss
+++ b/src/components/nav/NetworkPicker/style.scss
@@ -10,8 +10,20 @@
     cursor: pointer;
     display: flex;
     flex-direction: row;
+    transition: background-color 0.3s;
     margin-top: 10px;
     margin-bottom: 10px;
+    max-width: 258px;
+
+    > div:first-child {
+      flex: auto;
+      max-width: 200px;
+    }
+
+    > div:last-child {
+      display: flex;
+      align-items: center;
+    }
 
     .mh-value {
       color: $colorWhite;
